Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12893

IoPageWrite failed / Freeing dirty VACB debug spam

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.5
    • NTCore
    • None
    • March 2017, April 2017

    Description

      These lines happen during the NtReadFile/NtWriteFile apitests on testbot and in various other conditions.

      Root cause (at least in the case of these tests) is that the FS reduces file size to 0 before uninitializing the cache for deleted files. The flushing writes are then rejected by fastfat as invalid because they are past the end of the file.

      Attachments

        1. cc-truncate-on-uninit.patch
          8 kB
          ThFabba
        2. cc-purge.patch
          7 kB
          ThFabba
        3. fastfat-flush-dont-purge.patch
          1 kB
          ThFabba
        4. cc+fastfat.patch
          9 kB
          ThFabba
        5. cc+fastfat.patch
          9 kB
          ThFabba

        Issue Links

          Activity

            People

              ThFabba ThFabba
              ThFabba ThFabba
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: