[FASTFAT] - On rename/move, flush parent directory data from cache instead of purging it. CORE-12893

svn path=/trunk/; revision=74354